inline css added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>assignment 3</title>
 </head>
 <body>
-    
+    <h1 style="color: blueviolet; font-size: 40px;">I am learning css</h1>
 </body>
 </html>
