document level css added

--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html>
 <head>
     <title>assignment 3</title>
+    <style>
+        h2 {
+            color: brown;
+            background-color: aqua;
+            font-size: 30px;
+        }
+    </style>
 </head>
 <body>
     <h1 style="color: blueviolet; font-size: 40px;">I am learning css</h1>
+    <h2>CSS is very interesting to learning</h2>
 </body>
 </html>
