Externel Css added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>assignment 3</title>
+    <link rel="stylesheet" href="./style.css"/>
     <style>
         h2 {
             color: brown;
@@ -13,5 +14,8 @@
 <body>
     <h1 style="color: blueviolet; font-size: 40px;">I am learning css</h1>
     <h2>CSS is very interesting to learning</h2>
+    <p>CSS, or Cascading Style Sheets, is a stylesheet language used to describe the presentation of a document written
+        in HTML or XML (including XML dialects like SVG, MathML, or XHTML). It controls how elements are rendered on
+        various media, such as screens, paper, or in speech.</p>
 </body>
 </html>
